ssf/gwt/src/org/kablink/teaming/gwt/public/GwtMenus.css
/* */

/* ########################################################################################################### */


/* Start:  Generic menu styles. */
	.gwt-MenuBar-horizontal {
		border: 0px solid #BBB !important;
		background: transparent url(images/main_menu_bg.png) !important;
		}
	.gwt-MenuBar-horizontal .gwt-MenuItem {
		color: #1f1f1f;
		padding: 0 6px;
		}
/* End:  Generic binder view tools styles. */

/* Start:  Entry menu styles. */
	.vibe-configureMenuBar         {padding-left: 0px !important; padding-right: 0px !important;}
	.vibe-configureMenuBarDropDown {}
	.vibe-configureMenuBarItem     {border: 0 !important; padding-left: 0px !important; padding-right: 0px !important; margin-right: 6px !important;}
	.vibe-configureMenuImg         {padding-top: 1px; cursor: pointer;}
	
	.vibe-filterMenuBar         {padding-left: 0px !important; padding-right: 0px !important;}
	.vibe-filterMenuBarCheck    {margin-right: 2px;}
	.vibe-filterMenuBarDropDown {}
	.vibe-filterMenuBarItem     {border: 0 !important; padding-left: 0px !important; padding-right: 0px !important;}
	.vibe-filterMenuImg         {padding-top: 1px; cursor: pointer;}
	.vibe-filterMenuSavedAnchor {}
	.vibe-filterMenuSavedImg    {margin-left: 4px; cursor: pointer;}	
	.vibe-filterMenuSavedLabel  {}
	.vibe-filterMenuSavedPanel  {
		display: inline-block;
		font-size: .9em;
		color: #135c8f;
		padding: 0px 4px;
		border: 1px solid #ccc;
		-moz-border-radius: 5px;
		-webkit-border-radius: 5px;
		background-image: linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
		background-image: -o-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
		background-image: -moz-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
		background-image: -webkit-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
		background-image: -ms-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);	
		background-image: -webkit-gradient(
			linear,
			left bottom,
			left top,
			color-stop(0.47, #A8D4DD),
			color-stop(0.53, #D5EDF1),
			color-stop(1, #C8E4E9));
	}
	
	.vibe-entryMenuBar {padding: 3px;}
	.vibe-menuDisabled {color: silver !important;}
	.vibe-menuDisabled:hover  {
		background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#E0E0E0));
		background: -moz-linear-gradient(center top , #ffffff, #E0E0E0) repeat scroll 0 0;
		background-color: transparent;
		border: 1px solid #B8B8B8;
		font-weight: normal !important;
		font-size: 12px;
		padding: 2px 10px  !important;
		text-decoration:none;	
		-moz-border-radius: 15px;
		-webkit-border-radius: 15px;
	}
	
	.vibe-entryMenuBarItem
	{	
		background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#E0E0E0));
		background: -moz-linear-gradient(center top , #ffffff, #E0E0E0) repeat scroll 0 0;
		background-color: transparent;
		border: 1px solid #B8B8B8;
		font-weight: normal !important;
		font-size: 12px;
		padding: 2px 10px  !important;
		text-decoration:none;	
		-moz-border-radius: 15px;
		-webkit-border-radius: 15px;
		cursor: pointer !important;
		white-space: nowrap;
	}
	
	.vibe-entryMenuPopup     {white-space: nowrap;}
	.vibe-entryMenuPopupItem {white-space: nowrap;}
/* End:  Entry menu styles. */

/* Start:  Main menu styles. */
	.vibe-mainMenuBar_BoxDropDownImg
	{
		vertical-align: middle;
	}
	.vibe-mainMenuBar_BoxDropDownImgNonIE
	{
		margin-left: 1px;
	}
	.vibe-mainMenuBar_BoxImg
	{
		vertical-align: middle;
	}
	.vibe-mainMenuBar_BoxImgNonIE
	{
		margin-right: 2px;
	}
	.vibe-mainMenuBar_BoxPanel
	{
		border-left: 1px solid white;
		color: #414648; /* dark grey */
		font-size: 0.73em;
		font-weight: normal;
		padding: 3px 6px;
		vertical-align: top;
		white-space: nowrap;
	}
	.vibe-mainMenuBar_BoxText
	{
		font-size: 12px;
		vertical-align: middle;
	}
	.vibe-mainMenuButton
	{
		display: inline-block;
		height: 20px;
		margin-left: 3px;
		overflow: hidden;
		padding: 0px 3px !important;
		text-align: center;
		top: 2px;
		width: 28px;
		z-index: 310;
	}
	.vibe-mainMenuButton_Group
	{
		border: 0px !important;
		display: inline-block;
		font-size: 0.85em;
		font-weight: bold;
		height: 20px;
		letter-spacing: 0.05em;
		padding: 0px;
	}
	.vibe-mainMenuButton_WidgetAnchor
	{
		cursor: pointer;
	}
	.vibe-mainMenuButton_WidgetImage
	{
		margin-top: 2px;
	}
	.vibe-mainMenuContent
	{
		background: transparent;
		display: inline-block;
		height: 18px;
		margin: 0px;
		padding-top: 0px;
	}

	.vibe-binderViewTools
	.gwt-MenuBar-horizontal {
		background: #ededed url(images/spacer_1px.png) !important;
		-moz-border-radius-topleft: 5px;
		-moz-border-radius-topright: 5px;
		-webkit-border-top-left-radius: 5px;
		-webkit-border-top-right-radius: 5px;
		}
	.vibe-binderViewTools .gwt-MenuBar-horizontal .gwt-MenuBar table td {
		padding-right: 5px;
		}	

	.vibe-mainMenuControl
	{
		height: 25px;
		left: 0;
		padding: 0px;
		position: relative;
		top: 0;
		background: transparent url(images/main_menu_bg.png) repeat-x;
		white-space: nowrap;
		width: 100%;
		z-index: 300;
	}
	
	/* Start: GWT Vertical Menu styles*/
	.gwt-PopupPanel {
		background: #505354;
/*		background: #f6f6f6; */
		border: 0px;
		padding: 6px;
		-moz-border-radius: 5px;
		-webkit-border-radius: 5px;
		box-shadow: 0 2px 4px #505354;
		}
	.gwt-MenuBarPopup {
		box-shadow: 0 2px 4px #505354;
		margin: 4px 0px;
		z-index: 351;
		}
	.gwt-MenuBarPopup .menuPopupTopCenter,
	.gwt-MenuBarPopup .menuPopupBottomCenter,
	.gwt-MenuBarPopup .menuPopupMiddleLeft,
	.gwt-MenuBarPopup .menuPopupMiddleRight,
	.gwt-MenuBar-vertical {
		background: #505354;
/*		background: #f6f6f6; */
		}			
	.gwt-MenuBarPopup .menuPopupTopLeft {
		background: #505354;
		-moz-border-radius-topleft: 5px;
		-webkit-border-top-left-radius: 5px;
		}	
	.gwt-MenuBarPopup .menuPopupTopRight {
		background: #505354;
		-moz-border-radius-topright: 5px;
		-webkit-border-top-right-radius: 5px;
		}	
	.gwt-MenuBarPopup .menuPopupBottomLeft {
		background: #505354;
		-moz-border-radius-bottomleft: 5px;
		-webkit-border-bottom-left-radius: 5px;
		}	
	.gwt-MenuBarPopup .menuPopupBottomRight {
		background: #505354;
		-moz-border-radius-bottomright: 5px;
		-webkit-border-bottom-right-radius: 5px;
		}	
	.gwt-MenuBar-vertical .gwt-MenuItem {
		color: #fff;
/*		color: #353838; */
		padding: 4px 6px;
		}
	.gwt-MenuBar-vertical .gwt-MenuItemSeparator {
		padding: 0;
		}
	.gwt-MenuBar-vertical .gwt-MenuItemSeparator .menuSeparatorInner {
		height: 0px;
		border: 0px;
		margin: 5px 0;
		border-top: 1px solid #1f1f1f;
		border-bottom: 1px solid #626566;
		}
	.gwt-MenuBar .gwt-MenuItem-selected {
		color: #81b2bd;
		background-color: #353838;
		-moz-border-radius: 3px;
		-webkit-border-radius: 3px;
		}		
		
	.vibe-mainMenuControl .gwt-MenuBar .gwt-MenuItem-selected {
		color:#135c8f !important;
		background-image: linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%)!important;
		background-image: -o-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%) !important;
		background-image: -moz-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%) !important;
		background-image: -webkit-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%) !important;
		background-image: -ms-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%) !important;
		background-image: -webkit-gradient(
			linear,
			left bottom,
			left top,
			color-stop(0.47, #A8D4DD),
			color-stop(0.53, #D5EDF1),
			color-stop(1, #C8E4E9)) !important;
		-moz-border-radius: 3px;
		-webkit-border-radius: 3px;
		}	
		
	.vibe-entryMenuBar .gwt-MenuItem-selected {
		color: #135c8f !important;
		border: 1px solid #81b2bd;
		background: linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
		background: -o-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
		background: -moz-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
		background: -webkit-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
		background: -ms-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
		background: -webkit-gradient(
			linear,
			left bottom,
			left top,
			color-stop(0.47, #A8D4DD),
			color-stop(0.53, #D5EDF1),
			color-stop(1, #C8E4E9));
		-moz-border-radius: 15px;
		-webkit-border-radius: 15px;
	}

	/* End: GWT Vertical Menu styles*/


	.vibe-mainMenuPopup
	{
	}
	.vibe-mainMenuPopup_Core
	{
		z-index: 351;
	}
	.vibe-mainMenuPopup_Glass
	{
		background-color: #000;
		filter: alpha(opacity=0);
		opacity: 0.0;
		z-index: 350;
	}
	.vibe-mainMenuPopup_Item
	{ 
		white-space: nowrap;
	}
	.vibe-mainMenuPopup_ItemPanel
	{
	}
	.vibe-mainMenuPopup_ItemText
	{
	}
	.vibe-mainMenuSearch_ButtonAnchor
	{
		margin: 2px;
		vertical-align: top;
	}
	.vibe-mainMenuSearch_ButtonImage
	{
		margin: 2px;
		vertical-align: top;
	}
	.vibe-mainMenuSearch_Input
	{
		font-size: 10px;
		padding: 3px 0 0 3px;
		vertical-align: middle;
		width: 140px;
		background-color: transparent;
		border: 0px;
	}
	.vibe-mainMenuSearchOptions_Button
	{
		border: 0px !important;
		display: block;
		font-size: 0.85em;
		font-weight: bold;
		height: 20px;
		letter-spacing: 0.05em;
		padding: 0px;
		position: absolute;
		right: 10px;
		top: 1px;
		white-space: nowrap;
	}
	.vibe-mainMenuSearch_Panel
	{
		padding: 0 0 0 5px;
		border-left: none;
		display: block;
		position: absolute;
		right: 50px;
		top: 3px;
		height: 18px;
		white-space: nowrap;
		
		background-color: #fafafa;
		border: 1px solid #c4c4c4;
		-moz-border-radius: 15px;
		-webkit-border-radius: 15px;
	}

.gwt-MenuBar table {
	webkit-border-horizontal-spacing: 0px;
	webkit-border-vertical-spacing: 0px;	
	}	
	
.vibe-popupMenu
{
	z-index: 1010;
}

.vibe-popupMenuItemImg
{
	margin-right: 5px;
}


/* End:  Main menu styles. */

